# Hello-C

./: .gitignore  CMakeLists.txt  README.md  build.bat
app/: CMakeLists.txt  memory.c  memory_management.c
docs/: memory_management.md
